--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +12,45 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.mainheading{
+  text-align: left;
+  color:rgb(6, 50, 56);
+font-family: Georgia, sans-serif;
+font-weight: bold;
+margin-top: 1rem;
+margin-bottom: 1rem;
+}
+
+
+ a.active{
+  color:  rgb(132, 231, 248);
+  margin-right: 10px;
+} 
+
+
+.nav1{
+  margin-right: 10px;
+  color: rgb(255, 255, 255);
+  
+}
+.homenav{
+  margin-right: 10px;
+  color: rgb(255, 255, 255);
+  font-weight:900;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size:x-large;
+}
+.row_addissue_search{
+  background-color: rgb(132, 231, 248);
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  align-items: center;
+}
+NavLink:hover{
+  color: #000;
+
+}
+Card:hover{
+  box-shadow: 5px 10px 20px 1px rgba(0,0,0,0.253)
 }
